1.4.7: Refactor Greg and Transporter Clone Code