@@ -21,6 +21,7 @@ import com.pla.annoyingvillagers.util.HerobrinePortalUtil;
 import com.pla.annoyingvillagers.spawnhandler.GregData;
 import com.pla.annoyingvillagers.clazz.HerobrineMob;
 import com.pla.annoyingvillagers.util.ChatUtil;
+import com.pla.annoyingvillagers.util.EscapeUtil;
 import net.minecraft.commands.arguments.EntityAnchorArgument;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
@@ -44,6 +45,8 @@ import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.ai.attributes.AttributeSupplier.Builder;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.ai.goal.*;
+import net.minecraft.world.entity.ai.goal.target.HurtByTargetGoal;
+import net.minecraft.world.entity.ai.goal.target.NearestAttackableTargetGoal;
 import net.minecraft.world.entity.ai.navigation.PathNavigation;
 import net.minecraft.world.entity.monster.Monster;
 import net.minecraft.world.entity.player.Player;
@@ -76,108 +79,42 @@ import yesman.epicfight.world.effect.EpicFightMobEffects;
 
 import java.util.*;
 
+
 public class HerobrineGregEntity extends Monster {
+    private static final int MAX_COMBAT_LOW_CLONE_SUPPORT = 5;
+    private static final float FISHING_HOOK_ESCAPE_CANCEL_CHANCE = 0.8F;
+    private static final double SECOND_FORM_SUPPORT_SEARCH_RADIUS_SQR = 48.0D * 48.0D;
+
     private static final EntityDataAccessor<Boolean> WHITE_EYE =
             SynchedEntityData.defineId(HerobrineGregEntity.class, EntityDataSerializers.BOOLEAN);
     private static final EntityDataAccessor<Boolean> USE_HEROBRINE_TEXTURE =
             SynchedEntityData.defineId(HerobrineGregEntity.class, EntityDataSerializers.BOOLEAN);
     private static final EntityDataAccessor<Boolean> SUPPORTING_HEROBRINE =
             SynchedEntityData.defineId(HerobrineGregEntity.class, EntityDataSerializers.BOOLEAN);
-    private static final int TICKS_PER_SECOND = 20;
-    private static final int PORTAL_SUPPORT_COOLDOWN_MIN_TICKS = 15 * TICKS_PER_SECOND;
-    private static final int PORTAL_SUPPORT_COOLDOWN_MAX_TICKS = 30 * TICKS_PER_SECOND;
-    private static final int PORTAL_SUPPORT_RETRY_TICKS = 10 * TICKS_PER_SECOND;
-    private static final int SIX_PORTAL_SUPPORT_COOLDOWN_MIN_TICKS = 60 * TICKS_PER_SECOND;
-    private static final int SIX_PORTAL_SUPPORT_COOLDOWN_MAX_TICKS = 120 * TICKS_PER_SECOND;
-    private static final int LOW_CLONE_SUPPORT_COOLDOWN_MIN_TICKS = 90 * TICKS_PER_SECOND;
-    private static final int LOW_CLONE_SUPPORT_COOLDOWN_MAX_TICKS = 180 * TICKS_PER_SECOND;
-    private static final int LOW_CLONE_SUPPORT_RETRY_TICKS = 10 * TICKS_PER_SECOND;
-    private static final int RANGED_COUNTER_PORTAL_COOLDOWN_MIN_TICKS = 10 * TICKS_PER_SECOND;
-    private static final int RANGED_COUNTER_PORTAL_COOLDOWN_MAX_TICKS = 15 * TICKS_PER_SECOND;
-    private static final int RANGED_COUNTER_PORTAL_RETRY_TICKS = 3 * TICKS_PER_SECOND;
-    private static final int LOW_CLONE_SUPPORT_ENEMY_RADIUS = 48;
-    private static final int LOW_CLONE_SUPPORT_SPAWN_ATTEMPTS = 24;
-    private static final int SUPPORT_REPOSITION_RETRY_TICKS = 6 * TICKS_PER_SECOND;
-    private static final int SUPPORT_REPOSITION_MIN_COOLDOWN_TICKS = 35 * TICKS_PER_SECOND;
-    private static final int SUPPORT_REPOSITION_MAX_COOLDOWN_TICKS = 70 * TICKS_PER_SECOND;
-    private static final int ACTIVE_SUPPORT_RETREAT_TICKS = 90;
-    private static final int PORTAL_PAIR_CAST_TICKS = 18;
-    private static final int SIX_PORTAL_CAST_TICKS = 30;
-    private static final int PORTAL_SUMMON_AI_LOCK_TICKS = 5 * TICKS_PER_SECOND;
-    private static final int LOW_CLONE_SUMMON_WEAK_POINT_TICKS = 5 * TICKS_PER_SECOND;
-    private static final int QUEUED_SIX_PORTAL_SUPPORT_LOCK_TICKS = 12 * TICKS_PER_SECOND;
-    private static final int REQUESTED_SUPPORT_PORTAL_TICKS = 4 * TICKS_PER_SECOND;
-    private static final int SUPPORT_CATCH_UP_COOLDOWN_MIN_TICKS = 8 * TICKS_PER_SECOND;
-    private static final int SUPPORT_CATCH_UP_COOLDOWN_MAX_TICKS = 14 * TICKS_PER_SECOND;
-    private static final int SUPPORT_CATCH_UP_RETRY_TICKS = 4 * TICKS_PER_SECOND;
-    private static final byte SUPPORT_PORTAL_REQUEST_NONE = 0;
-    private static final byte SUPPORT_PORTAL_REQUEST_APPROACH = 1;
-    private static final byte SUPPORT_PORTAL_REQUEST_RETREAT = 2;
-    private static final double QUEUED_SIX_PORTAL_SUPPORT_READY_DISTANCE_SQR = 4.0D * 4.0D;
+    private static final EntityDataAccessor<Boolean> HOOKED =
+            SynchedEntityData.defineId(HerobrineGregEntity.class, EntityDataSerializers.BOOLEAN);
     private boolean summoning = false;
     private int summonTiming = -1;
     private int escapeTiming = -1;
     private int summonTimestamp = -1;
     private boolean combatMode = false;
     private int recallTime;
-    private int portalSupportCooldown = PORTAL_SUPPORT_COOLDOWN_MIN_TICKS;
-    private int sixPortalSupportCooldown;
-    private int lowCloneSupportCooldown = LOW_CLONE_SUPPORT_COOLDOWN_MIN_TICKS;
-    private int rangedCounterPortalCooldown = RANGED_COUNTER_PORTAL_RETRY_TICKS;
-    private int portalCastTicks;
-    private int portalSummonAiLockTicks;
-    private int lowCloneSummonWeakPointTicks;
-    private int queuedSixPortalSupportLockTicks;
-    private int requestedSupportPortalTicks;
+    private boolean fishingHookCancelledEscape;
+    private boolean hookedWaitingForGround;
+    private boolean hookedLeftGround;
     private int idleAvoidRepathCooldown;
-    private int supportRepositionCooldown = SUPPORT_REPOSITION_RETRY_TICKS;
-    private int supportCatchUpCooldown = SUPPORT_CATCH_UP_RETRY_TICKS;
+    private int supportRepositionCooldown = 120;
     private int supportRetreatPanicTicks;
     private int activeSupportRetreatTicks;
-    private byte requestedSupportPortalMode;
+    private int lowCloneSupportCooldown = 0;
+    private int portalPairCooldown = 0;
+    private int rangedCounterPortalCooldown = 0;
+    private int supportEscapePortalCooldown = 0;
+    private int portalEscapeStepBackCooldown = 0;
+    private int sixPortalSupportCooldown = 0;
     @Nullable
     private Vec3 activeSupportRetreatPos;
-    private long lastRetreatPortalAssistTick = Long.MIN_VALUE;
-    private long lastApproachPortalAssistTick = Long.MIN_VALUE;
     private int supportingHerobrineVisualTicks;
-    @Nullable
-    private UUID queuedSixPortalSupportTargetUUID;
-    @Nullable
-    private UUID requestedSupportPortalSupportUUID;
-    @Nullable
-    private UUID requestedSupportPortalTargetUUID;
-    private static final double SUPPORT_SEARCH_RADIUS = 40.0D;
-    private static final double SUPPORT_STAND_DISTANCE_SQR = 10.0D * 10.0D;
-    private static final double SUPPORT_STAND_RADIUS = 7.0D;
-    private static final double SUPPORT_DANGER_STAND_RADIUS = 15.0D;
-    private static final double SUPPORT_DANGER_STAND_DISTANCE_SQR = 18.0D * 18.0D;
-    private static final double SUPPORT_SAFE_ENEMY_SEARCH_RADIUS = 24.0D;
-    private static final double SUPPORT_SAFE_DISTANCE_SQR = 12.0D * 12.0D;
-    private static final double SUPPORT_STAND_REACHED_DISTANCE_SQR = 2.0D * 2.0D;
-    private static final double SUPPORT_MOVE_SPEED = 1.15D;
-    private static final double SUPPORT_DANGER_MOVE_SPEED = 1.25D;
-    private static final double SUPPORT_ACTIVE_RETREAT_MOVE_SPEED = 1.3D;
-    private static final double SUPPORT_CATCH_UP_DISTANCE_SQR = 50.0D * 50.0D;
-    private static final double SUPPORT_CATCH_UP_SEARCH_RADIUS = 96.0D;
-    private static final double IDLE_AVOID_SEARCH_RADIUS = 32.0D;
-    private static final double IDLE_AVOID_TRIGGER_DISTANCE_SQR = 18.0D * 18.0D;
-    private static final double IDLE_AVOID_MIN_DISTANCE = 12.0D;
-    private static final double IDLE_AVOID_MAX_DISTANCE = 20.0D;
-    private static final int IDLE_AVOID_REPATH_TICKS = 15;
-    private static final double IDLE_AVOID_MOVE_SPEED = 1.15D;
-    private static final double AVOID_WALK_SPEED = 1.0D;
-    private static final double AVOID_SPRINT_SPEED = 1.35D;
-    private static final double LOW_CLONE_SUPPORT_TRIGGER_DISTANCE_SQR = 24.0D * 24.0D;
-    private static final double SUPPORT_REPOSITION_GREG_DANGER_SQR = 12.0D * 12.0D;
-    private static final double SUPPORT_REPOSITION_SUPPORT_DANGER_SQR = 10.0D * 10.0D;
-    private static final double SUPPORT_REPOSITION_RETREAT_MIN_DISTANCE = 16.0D;
-    private static final double SUPPORT_REPOSITION_RETREAT_MAX_DISTANCE = 24.0D;
-    private static final double SUPPORT_REPOSITION_RETURN_SIDE_DISTANCE = 6.0D;
-    private static final int SUPPORT_SAFE_SAMPLE_COUNT = 16;
-    private static final int SUPPORT_STAND_REPATH_TICKS = 30;
-    private static final int SUPPORT_DANGER_REPATH_TICKS = 8;
-    private static final int SUPPORT_VISUAL_TICKS = 40;
-
     private Entity firstSummonedHerobrine;
     private Entity secondSummonedHerobrine;
     private Entity thirdSummonedHerobrine;
@@ -185,11 +122,13 @@ public class HerobrineGregEntity extends Monster {
     private UUID firstSummonedHerobrineUUID;
     private UUID secondSummonedHerobrineUUID;
     private UUID thirdSummonedHerobrineUUID;
+    private final Entity[] combatLowCloneSupport = new Entity[MAX_COMBAT_LOW_CLONE_SUPPORT];
+    private final UUID[] combatLowCloneSupportUUIDs = new UUID[MAX_COMBAT_LOW_CLONE_SUPPORT];
 
     private BlockPos lastFeetPos = null;
     private String chatName;
 
-    private final List<Item> listWeapons = new ArrayList<>(Arrays.asList(
+    public static final List<Item> listWeapons = List.of(
             Items.DIAMOND_SWORD,
             Items.DIAMOND_AXE,
             AnnoyingVillagersModItems.DIAMOND_ATTRACTOR_SWORD.get(),
@@ -207,7 +146,7 @@ public class HerobrineGregEntity extends Monster {
             AnnoyingVillagersModItems.DIAMOND_SICKLE.get(),
             AnnoyingVillagersModItems.DOUBLE_DIAMOND_GLAIVE.get(),
             AnnoyingVillagersModItems.DIAMOND_MOON_BLADE.get()
-    ));
+    );
 
     @Nullable
     public LivingEntityPatch<?> getLivingEntityPatch() {
@@ -237,7 +176,7 @@ public class HerobrineGregEntity extends Monster {
     public boolean isUseHerobrineTexture() { return this.entityData.get(USE_HEROBRINE_TEXTURE); }
 
     public void markSupportingHerobrine() {
-        this.supportingHerobrineVisualTicks = SUPPORT_VISUAL_TICKS;
+        this.supportingHerobrineVisualTicks = 40;
         this.setSupportingHerobrine(true);
     }
 
@@ -249,34 +188,126 @@ public class HerobrineGregEntity extends Monster {
         this.entityData.set(SUPPORTING_HEROBRINE, supportingHerobrine);
     }
 
-    private int randomPortalSupportCooldown() {
-        return PORTAL_SUPPORT_COOLDOWN_MIN_TICKS
-                + this.random.nextInt(PORTAL_SUPPORT_COOLDOWN_MAX_TICKS - PORTAL_SUPPORT_COOLDOWN_MIN_TICKS + 1);
+    public boolean isHooked() {
+        return this.entityData.get(HOOKED);
     }
 
-    private int randomSixPortalSupportCooldown() {
-        return SIX_PORTAL_SUPPORT_COOLDOWN_MIN_TICKS
-                + this.random.nextInt(SIX_PORTAL_SUPPORT_COOLDOWN_MAX_TICKS - SIX_PORTAL_SUPPORT_COOLDOWN_MIN_TICKS + 1);
+    private void setHooked(boolean hooked) {
+        this.entityData.set(HOOKED, hooked);
+        if (!hooked) {
+            this.hookedWaitingForGround = false;
+            this.hookedLeftGround = false;
+        }
+        if (hooked && !this.level().isClientSide() && !this.hookedWaitingForGround) {
+            this.enforceHookedNoAiLock();
+        }
     }
 
-    private int randomLowCloneSupportCooldown() {
-        return LOW_CLONE_SUPPORT_COOLDOWN_MIN_TICKS
-                + this.random.nextInt(LOW_CLONE_SUPPORT_COOLDOWN_MAX_TICKS - LOW_CLONE_SUPPORT_COOLDOWN_MIN_TICKS + 1);
+    private void releaseHookedPhysicsUntilGround() {
+        this.hookedWaitingForGround = true;
+        this.hookedLeftGround = this.hookedLeftGround || !this.onGround();
+        this.noPhysics = false;
+        this.setNoGravity(false);
+        this.setNoAi(false);
+        this.setInvulnerable(false);
+        this.getNavigation().stop();
     }
 
-    private int randomRangedCounterPortalCooldown() {
-        return RANGED_COUNTER_PORTAL_COOLDOWN_MIN_TICKS
-                + this.random.nextInt(RANGED_COUNTER_PORTAL_COOLDOWN_MAX_TICKS - RANGED_COUNTER_PORTAL_COOLDOWN_MIN_TICKS + 1);
+    private void tickHookedGroundRelock() {
+        if (!this.hookedWaitingForGround) {
+            this.enforceHookedNoAiLock();
+            return;
+        }
+
+        this.noPhysics = false;
+        this.setNoGravity(false);
+        this.setInvulnerable(false);
+        if (!this.onGround()) {
+            this.hookedLeftGround = true;
+        }
+        if (this.hookedLeftGround && this.onGround()) {
+            this.hookedWaitingForGround = false;
+            this.hookedLeftGround = false;
+            this.enforceHookedNoAiLock();
+        }
+    }
+
+    private void enforceHookedNoAiLock() {
+        this.setNoAi(true);
+        this.getNavigation().stop();
+        this.setSprinting(false);
+        this.setTarget(null);
+        this.xxa = 0.0F;
+        this.yya = 0.0F;
+        this.zza = 0.0F;
+        Vec3 deltaMovement = this.getDeltaMovement();
+        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
     }
 
     private int randomSupportRepositionCooldown() {
-        return SUPPORT_REPOSITION_MIN_COOLDOWN_TICKS
-                + this.random.nextInt(SUPPORT_REPOSITION_MAX_COOLDOWN_TICKS - SUPPORT_REPOSITION_MIN_COOLDOWN_TICKS + 1);
+        return (35 * 20)
+                + this.random.nextInt((70 * 20) - (35 * 20) + 1);
     }
 
-    private int randomSupportCatchUpCooldown() {
-        return SUPPORT_CATCH_UP_COOLDOWN_MIN_TICKS
-                + this.random.nextInt(SUPPORT_CATCH_UP_COOLDOWN_MAX_TICKS - SUPPORT_CATCH_UP_COOLDOWN_MIN_TICKS + 1);
+    private int randomCooldownSeconds(int minSeconds, int maxSeconds) {
+        return minSeconds * 20 + this.random.nextInt((maxSeconds - minSeconds) * 20 + 1);
+    }
+
+    public int getLowCloneSupportCooldown() {
+        return lowCloneSupportCooldown;
+    }
+
+    public void setLowCloneSupportCooldown() {
+        this.lowCloneSupportCooldown = randomCooldownSeconds(90, 180);
+    }
+
+    public int getPortalPairCooldown() {
+        return portalPairCooldown;
+    }
+
+    public void setPortalPairCooldown() {
+        this.portalPairCooldown = randomCooldownSeconds(30, 60);
+    }
+
+    public int getRangedCounterPortalCooldown() {
+        return rangedCounterPortalCooldown;
+    }
+
+    public void setRangedCounterPortalCooldown() {
+        this.rangedCounterPortalCooldown = randomCooldownSeconds(30, 60);
+    }
+
+    public int getSupportEscapePortalCooldown() {
+        return supportEscapePortalCooldown;
+    }
+
+    public void setSupportEscapePortalCooldown() {
+        this.supportEscapePortalCooldown = randomCooldownSeconds(30, 60);
+    }
+
+    public int getPortalEscapeStepBackCooldown() {
+        return portalEscapeStepBackCooldown;
+    }
+
+    public void setPortalEscapeStepBackCooldown() {
+        this.portalEscapeStepBackCooldown = randomCooldownSeconds(30, 60);
+    }
+
+    public int getSixPortalSupportCooldown() {
+        return sixPortalSupportCooldown;
+    }
+
+    public void setSixPortalSupportCooldown() {
+        this.sixPortalSupportCooldown = randomCooldownSeconds(30, 60);
+    }
+
+    private void tickCombatActionCooldowns() {
+        if (this.lowCloneSupportCooldown > 0) this.lowCloneSupportCooldown--;
+        if (this.portalPairCooldown > 0) this.portalPairCooldown--;
+        if (this.rangedCounterPortalCooldown > 0) this.rangedCounterPortalCooldown--;
+        if (this.supportEscapePortalCooldown > 0) this.supportEscapePortalCooldown--;
+        if (this.portalEscapeStepBackCooldown > 0) this.portalEscapeStepBackCooldown--;
+        if (this.sixPortalSupportCooldown > 0) this.sixPortalSupportCooldown--;
     }
 
     @Override
@@ -285,373 +316,138 @@ public class HerobrineGregEntity extends Monster {
         this.entityData.define(WHITE_EYE, false);
         this.entityData.define(USE_HEROBRINE_TEXTURE, false);
         this.entityData.define(SUPPORTING_HEROBRINE, false);
+        this.entityData.define(HOOKED, false);
     }
 
     public boolean isSummoning() {
         return summoning;
     }
 
-    public void requestApproachPortalFor(@Nullable LivingEntity support, @Nullable LivingEntity target) {
-        queueSupportPortalRequest(SUPPORT_PORTAL_REQUEST_APPROACH, support, target);
-    }
-
-    public void requestRetreatPortalFor(@Nullable LivingEntity support, @Nullable LivingEntity threat) {
-        queueSupportPortalRequest(SUPPORT_PORTAL_REQUEST_RETREAT, support, threat);
-    }
-
-    public boolean canUseSixPortalSupport() {
-        return this.sixPortalSupportCooldown <= 0 && this.portalCastTicks <= 0;
-    }
-
     public boolean canAnswerSixPortalSupportRequest() {
-        return this.canUseSixPortalSupport()
-                && !this.summoning
+        return !this.summoning
                 && this.escapeTiming < 0
                 && this.summonTiming < 0
                 && !this.isNoAi()
-                && !this.isPortalSummonAiLocked();
+                && this.sixPortalSupportCooldown <= 0;
     }
 
-    public void onSixPortalSupportUsed() {
-        this.sixPortalSupportCooldown = randomSixPortalSupportCooldown();
+    public boolean canUseSupportPortalAction() {
+        return !this.summoning
+                && this.escapeTiming < 0
+                && this.summonTiming < 0
+                && !this.isNoAi();
     }
 
-    public void reserveSixPortalSupport(@Nullable LivingEntity support) {
-        if (support == null || !support.isAlive()) {
-            return;
-        }
-        this.queuedSixPortalSupportTargetUUID = support.getUUID();
-        this.queuedSixPortalSupportLockTicks = Math.max(this.queuedSixPortalSupportLockTicks, QUEUED_SIX_PORTAL_SUPPORT_LOCK_TICKS);
-        this.markSupportingHerobrine();
-    }
-
-    public void clearSixPortalSupportReservation() {
-        this.queuedSixPortalSupportTargetUUID = null;
-        this.queuedSixPortalSupportLockTicks = 0;
-    }
-
-    private void queueSupportPortalRequest(byte mode, @Nullable LivingEntity support, @Nullable LivingEntity target) {
-        if (mode == SUPPORT_PORTAL_REQUEST_NONE
-                || support == null
-                || target == null
-                || !support.isAlive()
-                || !target.isAlive()
-                || support.level() != this.level()
-                || target.level() != this.level()
-                || isRidingHerobrineDragon(support)) {
-            return;
-        }
-
-        this.requestedSupportPortalMode = mode;
-        this.requestedSupportPortalSupportUUID = support.getUUID();
-        this.requestedSupportPortalTargetUUID = target.getUUID();
-        this.requestedSupportPortalTicks = Math.max(this.requestedSupportPortalTicks, REQUESTED_SUPPORT_PORTAL_TICKS);
-        this.markSupportingHerobrine();
-    }
-
-    private void clearSupportPortalRequest() {
-        this.requestedSupportPortalMode = SUPPORT_PORTAL_REQUEST_NONE;
-        this.requestedSupportPortalSupportUUID = null;
-        this.requestedSupportPortalTargetUUID = null;
-        this.requestedSupportPortalTicks = 0;
-    }
-
-    public boolean isSixPortalSupportReserved() {
-        return this.queuedSixPortalSupportLockTicks > 0 && this.queuedSixPortalSupportTargetUUID != null;
-    }
-
-    public boolean isPortalCasting() {
-        return this.portalCastTicks > 0;
-    }
-
-    public void startPortalPairCast() {
-        this.startPortalCast(PORTAL_PAIR_CAST_TICKS);
-    }
-
-    public void startSixPortalCast() {
-        this.startPortalCast(SIX_PORTAL_CAST_TICKS);
-    }
-
-    public boolean isPortalSummonAiLocked() {
-        return this.portalSummonAiLockTicks > 0;
-    }
-
-    public boolean isLowCloneSummonWeakPointActive() {
-        return this.lowCloneSummonWeakPointTicks > 0;
-    }
-
-    public void beginPortalSummonAiLock() {
-        this.portalSummonAiLockTicks = Math.max(this.portalSummonAiLockTicks, PORTAL_SUMMON_AI_LOCK_TICKS);
-        this.setNoAi(true);
-        this.getNavigation().stop();
-        this.setSprinting(false);
-        this.xxa = 0.0F;
-        this.zza = 0.0F;
-        Vec3 deltaMovement = this.getDeltaMovement();
-        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
-    }
-
-    private void startLowCloneSummonWeakPoint() {
-        this.lowCloneSummonWeakPointTicks = Math.max(this.lowCloneSummonWeakPointTicks, LOW_CLONE_SUMMON_WEAK_POINT_TICKS);
-        this.setNoAi(true);
-        this.getNavigation().stop();
-        this.setSprinting(false);
-        this.xxa = 0.0F;
-        this.zza = 0.0F;
-        Vec3 deltaMovement = this.getDeltaMovement();
-        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
-    }
-
-    private void startPortalCast(int ticks) {
-        this.portalCastTicks = Math.max(this.portalCastTicks, ticks);
-        this.markSupportingHerobrine();
-        this.getNavigation().stop();
-        this.xxa = 0.0F;
-        this.zza = 0.0F;
-        Vec3 deltaMovement = this.getDeltaMovement();
-        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
-    }
-
-    private void tickPortalSummonAiLock() {
-        if (this.portalSummonAiLockTicks <= 0) {
-            return;
-        }
-
-        this.portalSummonAiLockTicks--;
-        this.addEffect(new MobEffectInstance(EpicFightMobEffects.STUN_IMMUNITY.get(), 2, 3, false, false));
-        this.addEffect(new MobEffectInstance(CEMobEffects.FULL_STUN_IMMUNITY.get(), 2, 3, false, false));
-        this.setNoAi(true);
-        this.getNavigation().stop();
-        this.setSprinting(false);
-        this.xxa = 0.0F;
-        this.zza = 0.0F;
-        Vec3 deltaMovement = this.getDeltaMovement();
-        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
-        if (this.getTarget() != null && this.getTarget().isAlive()) {
-            this.getLookControl().setLookAt(this.getTarget(), 30.0F, 30.0F);
-        }
-
-        if (this.portalSummonAiLockTicks == 0 && !this.shouldStayNoAiWithoutPortalLock()) {
-            this.setNoAi(false);
-        }
-    }
-
-    private void tickLowCloneSummonWeakPoint() {
-        if (this.lowCloneSummonWeakPointTicks <= 0) {
-            return;
-        }
-
-        this.lowCloneSummonWeakPointTicks--;
-        this.addEffect(new MobEffectInstance(EpicFightMobEffects.STUN_IMMUNITY.get(), 2, 3, false, false));
-        this.addEffect(new MobEffectInstance(CEMobEffects.FULL_STUN_IMMUNITY.get(), 2, 3, false, false));
-        this.setNoAi(true);
-        this.getNavigation().stop();
-        this.setSprinting(false);
-        this.setTarget(null);
-        this.xxa = 0.0F;
-        this.zza = 0.0F;
-        Vec3 deltaMovement = this.getDeltaMovement();
-        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
-
-        if (this.lowCloneSummonWeakPointTicks == 0 && !this.shouldStayNoAiWithoutPortalLock()) {
-            this.setNoAi(false);
-        }
-    }
-
-    private void tickQueuedSixPortalSupportReservation() {
-        if (this.queuedSixPortalSupportLockTicks <= 0 || this.queuedSixPortalSupportTargetUUID == null) {
-            this.clearSixPortalSupportReservation();
-            return;
-        }
-
-        this.queuedSixPortalSupportLockTicks--;
-        LivingEntity support = getQueuedSixPortalSupportTarget();
-        if (support == null) {
-            this.clearSixPortalSupportReservation();
-            return;
-        }
-
-        this.markSupportingHerobrine();
-        this.getLookControl().setLookAt(support, 30.0F, 30.0F);
-        if (!this.isPortalCasting()
-                && !this.isPortalSummonAiLocked()
-                && this.distanceToSqr(support) > QUEUED_SIX_PORTAL_SUPPORT_READY_DISTANCE_SQR) {
-            this.getNavigation().moveTo(support, 1.35D);
-        }
-
-        if (this.queuedSixPortalSupportLockTicks == 0) {
-            this.clearSixPortalSupportReservation();
-        }
-    }
-
-    private boolean tickRequestedSupportPortalAction() {
-        if (this.requestedSupportPortalTicks <= 0
-                || this.requestedSupportPortalMode == SUPPORT_PORTAL_REQUEST_NONE
-                || this.requestedSupportPortalSupportUUID == null
-                || this.requestedSupportPortalTargetUUID == null
-                || !(this.level() instanceof ServerLevel serverLevel)) {
-            this.clearSupportPortalRequest();
-            return false;
-        }
-
-        this.requestedSupportPortalTicks--;
-        Entity supportEntity = serverLevel.getEntity(this.requestedSupportPortalSupportUUID);
-        Entity targetEntity = serverLevel.getEntity(this.requestedSupportPortalTargetUUID);
-        if (!(supportEntity instanceof LivingEntity support)
-                || !(targetEntity instanceof LivingEntity target)
-                || !support.isAlive()
-                || !target.isAlive()
-                || isRidingHerobrineDragon(support)) {
-            this.clearSupportPortalRequest();
-            return false;
-        }
-
-        if (this.distanceToSqr(support) > SUPPORT_CATCH_UP_DISTANCE_SQR) {
-            if (this.supportCatchUpCooldown <= 0 && this.tryOpenSupportCatchUpPortal(serverLevel, support)) {
-                this.supportCatchUpCooldown = randomSupportCatchUpCooldown();
-                this.requestedSupportPortalTicks = Math.max(this.requestedSupportPortalTicks, TICKS_PER_SECOND);
-                return true;
-            }
-            if (this.requestedSupportPortalTicks <= 0) {
-                this.clearSupportPortalRequest();
-            }
-            return false;
-        }
-
-        boolean activated = this.requestedSupportPortalMode == SUPPORT_PORTAL_REQUEST_RETREAT
-                ? this.tryOpenRetreatPortalFor(support, target)
-                : this.tryOpenApproachPortalFor(support, target);
-        if (activated || this.requestedSupportPortalTicks <= 0) {
-            this.clearSupportPortalRequest();
-        }
-        return activated;
-    }
-
-    private boolean tickFarSupportPortalCatchUp() {
-        if (this.supportCatchUpCooldown > 0) {
-            return false;
-        }
-        if (!(this.level() instanceof ServerLevel serverLevel)) {
-            return false;
-        }
-
-        LivingEntity support = this.findCatchUpSupport(serverLevel);
-        if (support == null || !support.isAlive() || isRidingHerobrineDragon(support)) {
-            return false;
-        }
-        if (this.distanceToSqr(support) <= SUPPORT_CATCH_UP_DISTANCE_SQR) {
-            return false;
-        }
-        if (!this.tryOpenSupportCatchUpPortal(serverLevel, support)) {
-            return false;
-        }
-
-        this.supportCatchUpCooldown = randomSupportCatchUpCooldown();
-        return true;
+    public boolean canSummonLowCloneSupport() {
+        return !this.summoning
+                && this.escapeTiming < 0
+                && this.summonTiming < 0
+                && !this.isNoAi()
+                && this.onGround()
+                && this.lowCloneSupportCooldown <= 0
+                && this.hasAvailableCombatLowCloneSupportSlot();
     }
 
     @Nullable
-    private LivingEntity findCatchUpSupport(ServerLevel serverLevel) {
-        LivingEntity linkedSupport = this.findLinkedSupportHerobrine(serverLevel, SUPPORT_CATCH_UP_SEARCH_RADIUS);
-        if (linkedSupport != null) {
-            return linkedSupport;
-        }
-
-        LivingEntity nearbySupport = HerobrinePortalCombatUtil.findPortalSupportHerobrine(this, SUPPORT_CATCH_UP_SEARCH_RADIUS);
-        if (nearbySupport != null && nearbySupport.isAlive() && !isRidingHerobrineDragon(nearbySupport)) {
-            return nearbySupport;
+    public LivingEntity findEscapingSupportHerobrine() {
+        for (LivingEntity support : HerobrinePortalCombatUtil.findSupportHerobrines(this, 40.0D)) {
+            if (support instanceof Mob mob
+                    && support.isAlive()
+                    && isGregEscapeSupportTarget(support)
+                    && !isRidingHerobrineDragon(support)
+                    && mob.getTarget() != null
+                    && mob.getTarget().isAlive()
+                    && EscapeUtil.checkEscape(mob)) {
+                return support;
+            }
         }
         return null;
     }
 
-    @Nullable
-    private LivingEntity findLinkedSupportHerobrine(ServerLevel serverLevel, double radius) {
-        UUID gregUuid = this.getUUID();
-        LivingEntity nearest = null;
-        double nearestDistanceSqr = Double.MAX_VALUE;
-        for (HerobrineMob herobrineMob : serverLevel.getEntitiesOfClass(HerobrineMob.class, this.getBoundingBox().inflate(radius),
-                mob -> mob.isAlive() && gregUuid.equals(mob.getGregUUID()))) {
-            if (isRidingHerobrineDragon(herobrineMob)) {
-                continue;
-            }
-            double distanceSqr = this.distanceToSqr(herobrineMob);
-            if (distanceSqr < nearestDistanceSqr) {
-                nearest = herobrineMob;
-                nearestDistanceSqr = distanceSqr;
-            }
-        }
-        return nearest;
+    private static boolean isGregEscapeSupportTarget(LivingEntity entity) {
+        return entity instanceof TransporterHerobrineCloneEntity
+                || entity instanceof LowHerobrineCloneEntity
+                || entity instanceof LowShadowHerobrineCloneEntity;
     }
 
-    private boolean tryOpenSupportCatchUpPortal(ServerLevel serverLevel, LivingEntity support) {
-        if (!TransporterFragmentItem.canSpawnOwnedPortals(serverLevel, this, 2)) {
+    private static boolean isGregFollowSupportTarget(LivingEntity entity) {
+        return !(entity instanceof TransporterHerobrineCloneEntity)
+                && !(entity instanceof LowHerobrineCloneEntity)
+                && !(entity instanceof LowShadowHerobrineCloneEntity);
+    }
+
+    @Nullable
+    public LivingEntity findGregFollowSupportHerobrine() {
+        for (LivingEntity support : HerobrinePortalCombatUtil.findSupportHerobrines(this, 40.0D)) {
+            if (support.isAlive()
+                    && isGregFollowSupportTarget(support)
+                    && !(support.isPassenger() && support.getVehicle() instanceof HerobrineDragonEntity)) {
+                return support;
+            }
+        }
+        return null;
+    }
+
+    public boolean isSupportingSecondFormCaster(LivingEntity support) {
+        if (!(support instanceof HerobrineMob herobrineMob) || !support.isAlive()) {
             return false;
         }
+        UUID supportGregUUID = herobrineMob.getGregUUID();
+        boolean assignedSupport = supportGregUUID != null && supportGregUUID.equals(this.getUUID());
+        return (assignedSupport || this.isSupportingHerobrine()) && this.distanceToSqr(support) <= SECOND_FORM_SUPPORT_SEARCH_RADIUS_SQR;
+    }
 
-        Vec3 exit = this.findCatchUpExitPosition(serverLevel, support);
-        if (exit == null) {
-            return false;
-        }
-
-        int spawned = TransporterFragmentItem.spawnLinkedPortalPair(
-                this.level(),
-                this,
-                HerobrinePortalCombatUtil.applySupportPortalYOffset(this, this.position()),
-                HerobrinePortalCombatUtil.applySupportPortalYOffset(this, exit)
-        );
-        if (spawned <= 0) {
-            return false;
-        }
-
+    public void playSecondFormSupportCast(LivingEntity support) {
         this.markSupportingHerobrine();
+        if (support != null && support.isAlive()) {
+            this.getLookControl().setLookAt(support, 30.0F, 30.0F);
+        }
+        this.playSecondFormSupportCastAnimation();
+    }
+
+    public boolean canFishingHookCancelEscape() {
+        return this.escapeTiming >= 0 || this.getPersistentData().getBoolean(HerobrinePortalUtil.NBT_SINKING);
+    }
+
+    public boolean tryFishingHookCancelEscape() {
+        if (!this.canFishingHookCancelEscape()) {
+            return false;
+        }
+        if (this.random.nextFloat() >= FISHING_HOOK_ESCAPE_CANCEL_CHANCE) {
+            return false;
+        }
+
+        this.escapeTiming = -1;
+        this.summonTiming = -2;
+        this.summoning = false;
+        this.combatMode = false;
+        this.recallTime = -1;
+        this.fishingHookCancelledEscape = true;
+        this.hookedWaitingForGround = true;
+        this.hookedLeftGround = !this.onGround();
+        this.setHooked(true);
+        HerobrinePortalUtil.cancelSinkTransition(this);
+        EpicfightUtil.cancel(this, AnimsSculkSteve.PORTAL_SUMMON);
+        this.restoreGregHookedEscapeAppearance();
+        this.releaseHookedPhysicsUntilGround();
         this.getNavigation().stop();
-        this.teleportTo(exit.x, exit.y, exit.z);
-        this.setDeltaMovement(Vec3.ZERO);
-        this.hasImpulse = true;
-        this.getLookControl().setLookAt(support, 30.0F, 30.0F);
-        HerobrinePortalCombatUtil.playPortalPairSummon(this);
         return true;
     }
 
-    @Nullable
-    private Vec3 findCatchUpExitPosition(ServerLevel serverLevel, LivingEntity support) {
-        Vec3 away = horizontalDirection(this.position().subtract(support.position()));
-        if (away.lengthSqr() < 1.0E-4D) {
-            away = horizontalDirection(support.getLookAngle().scale(-1.0D));
-        }
-        if (away.lengthSqr() < 1.0E-4D) {
-            away = new Vec3(1.0D, 0.0D, 0.0D);
-        }
-
-        for (int attempt = 0; attempt < 12; attempt++) {
-            double turn = (this.random.nextDouble() - 0.5D) * 1.6D;
-            Vec3 direction = rotateHorizontal(away, turn);
-            double distance = 1.75D + this.random.nextDouble() * 2.0D;
-            Vec3 raw = support.position().add(direction.scale(distance));
-            Vec3 candidate = surfacePosition(serverLevel, raw.x, raw.z);
-            if (isValidSupportRetreatPosition(serverLevel, candidate)) {
-                return candidate;
-            }
-        }
-
-        Vec3 fallback = surfacePosition(serverLevel, support.getX(), support.getZ());
-        return isValidSupportRetreatPosition(serverLevel, fallback) ? fallback : null;
+    private void restoreGregHookedEscapeAppearance() {
+        this.setUseHerobrineTexture(false);
+        this.setWhiteEye(true);
+        this.setItemSlot(EquipmentSlot.HEAD, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_HELMET.get())));
+        this.setItemSlot(EquipmentSlot.CHEST, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_CHESTPLATE.get())));
+        this.setItemSlot(EquipmentSlot.LEGS, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_LEGGINGS.get())));
+        this.setItemSlot(EquipmentSlot.FEET, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_BOOTS.get())));
     }
 
-    @Nullable
-    private LivingEntity getQueuedSixPortalSupportTarget() {
-        if (this.queuedSixPortalSupportTargetUUID == null || !(this.level() instanceof ServerLevel serverLevel)) {
-            return null;
+    private void playSecondFormSupportCastAnimation() {
+        LivingEntityPatch<?> patch = EpicFightCapabilities.getEntityPatch(this, LivingEntityPatch.class);
+        if (patch != null && !this.level().isClientSide()) {
+            patch.playAnimationSynchronized(AnimsSculkSteve.PORTAL_SUMMON, 0.0F);
         }
-        Entity entity = serverLevel.getEntity(this.queuedSixPortalSupportTargetUUID);
-        return entity instanceof LivingEntity livingEntity && livingEntity.isAlive() ? livingEntity : null;
-    }
-
-    private boolean shouldStayNoAiWithoutPortalLock() {
-        return this.summoning
-                || this.summonTiming >= 0
-                || this.escapeTiming >= 0
-                || this.lowCloneSummonWeakPointTicks > 0;
     }
 
     public void setSummoning(boolean summoning) {
@@ -689,10 +485,6 @@ public class HerobrineGregEntity extends Monster {
         int randomMin = Math.min(min, max);
         int randomMax = Math.max(min, max);
         this.recallTime = (randomMin + new Random().nextInt(randomMax - randomMin + 1)) * 60 * 20;
-        this.portalSupportCooldown = randomPortalSupportCooldown();
-        this.lowCloneSupportCooldown = randomLowCloneSupportCooldown();
-        this.rangedCounterPortalCooldown = randomRangedCounterPortalCooldown();
-
         this.setPathfindingMalus(BlockPathTypes.WATER, 0.0F);
         this.setPathfindingMalus(BlockPathTypes.WATER_BORDER, 0.0F);
         this.setPathfindingMalus(BlockPathTypes.LAVA, 0.0F);
@@ -706,6 +498,15 @@ public class HerobrineGregEntity extends Monster {
 
     protected void registerGoals() {
         super.registerGoals();
+        this.targetSelector.addGoal(1, new HurtByTargetGoal(this));
+        this.targetSelector.addGoal(2, new NearestAttackableTargetGoal<>(
+                this,
+                LivingEntity.class,
+                10,
+                true,
+                false,
+                target -> target != null && HerobrinePortalCombatUtil.isEnemyOf(this, target)
+        ));
         this.goalSelector.addGoal(0, new Goal() {
             private LivingEntity support;
             private Vec3 standPosition;
@@ -721,7 +522,7 @@ public class HerobrineGregEntity extends Monster {
                     return false;
                 }
 
-                this.support = HerobrinePortalCombatUtil.findPortalSupportHerobrine(HerobrineGregEntity.this, SUPPORT_SEARCH_RADIUS);
+                this.support = findGregFollowSupportHerobrine();
                 return isValidSupport(this.support);
             }
 
@@ -729,7 +530,7 @@ public class HerobrineGregEntity extends Monster {
             public boolean canContinueToUse() {
                 return canMoveForSupport()
                         && isValidSupport(this.support)
-                        && distanceToSqr(this.support) <= SUPPORT_SEARCH_RADIUS * SUPPORT_SEARCH_RADIUS;
+                        && distanceToSqr(this.support) <= 40.0D * 40.0D;
             }
 
             @Override
@@ -742,13 +543,17 @@ public class HerobrineGregEntity extends Monster {
                 getLookControl().setLookAt(this.support, 30.0F, 30.0F);
                 double distanceSqr = distanceToSqr(this.support);
                 LivingEntity threat = findNearestSupportThreat(this.support);
+                if (threat != null && threat.isAlive()) {
+                    setTarget(threat);
+                    getLookControl().setLookAt(threat, 30.0F, 30.0F);
+                }
                 if (activeSupportRetreatTicks > 0 && activeSupportRetreatPos != null) {
                     activeSupportRetreatTicks--;
                     if (threat != null) {
                         getLookControl().setLookAt(threat, 30.0F, 30.0F);
                     }
-                    if (position().distanceToSqr(activeSupportRetreatPos) > SUPPORT_STAND_REACHED_DISTANCE_SQR) {
-                        getNavigation().moveTo(activeSupportRetreatPos.x, activeSupportRetreatPos.y, activeSupportRetreatPos.z, SUPPORT_ACTIVE_RETREAT_MOVE_SPEED);
+                    if (position().distanceToSqr(activeSupportRetreatPos) > (2.0D * 2.0D)) {
+                        getNavigation().moveTo(activeSupportRetreatPos.x, activeSupportRetreatPos.y, activeSupportRetreatPos.z, 1.3D);
                     } else {
                         getNavigation().stop();
                     }
@@ -756,10 +561,10 @@ public class HerobrineGregEntity extends Monster {
                 }
 
                 boolean currentSpotSafe = isCurrentSupportSpotSafe(this.support, threat);
-                double maxStandDistanceSqr = threat == null ? SUPPORT_STAND_DISTANCE_SQR : SUPPORT_DANGER_STAND_DISTANCE_SQR;
+                double maxStandDistanceSqr = threat == null ? (10.0D * 10.0D) : (18.0D * 18.0D);
                 if (distanceSqr <= maxStandDistanceSqr && currentSpotSafe) {
                     getNavigation().stop();
-                    this.repathCooldown = SUPPORT_STAND_REPATH_TICKS;
+                    this.repathCooldown = 30;
                     return;
                 }
                 if (this.repathCooldown-- <= 0 || getNavigation().isDone() || hasReachedStandPosition()) {
@@ -768,12 +573,13 @@ public class HerobrineGregEntity extends Monster {
             }
 
             private boolean canMoveForSupport() {
-                return !summoning && escapeTiming < 0 && summonTiming < 0 && !isNoAi() && !isPortalCasting();
+                return !summoning && escapeTiming < 0 && summonTiming < 0 && !isNoAi();
             }
 
             private boolean isValidSupport(@Nullable LivingEntity entity) {
                 return entity != null
                         && entity.isAlive()
+                        && isGregFollowSupportTarget(entity)
                         && !(entity.isPassenger() && entity.getVehicle() instanceof HerobrineDragonEntity);
             }
 
@@ -782,34 +588,34 @@ public class HerobrineGregEntity extends Monster {
                 LivingEntity threat = HerobrinePortalCombatUtil.findThreateningEnemy(
                         HerobrineGregEntity.this,
                         support,
-                        SUPPORT_SAFE_ENEMY_SEARCH_RADIUS
+                        24.0D
                 );
                 if (threat != null) {
                     return threat;
                 }
-                return HerobrinePortalCombatUtil.findEnemyForSupport(support, getTarget(), SUPPORT_SAFE_ENEMY_SEARCH_RADIUS);
+                return HerobrinePortalCombatUtil.findEnemyForSupport(support, getTarget(), 24.0D);
             }
 
             private boolean isCurrentSupportSpotSafe(LivingEntity support, @Nullable LivingEntity threat) {
-                double maxSupportDistanceSqr = threat == null ? SUPPORT_STAND_DISTANCE_SQR : SUPPORT_DANGER_STAND_DISTANCE_SQR;
+                double maxSupportDistanceSqr = threat == null ? (10.0D * 10.0D) : (18.0D * 18.0D);
                 if (distanceToSqr(support) > maxSupportDistanceSqr) {
                     return false;
                 }
-                return threat == null || distanceToSqr(threat) >= SUPPORT_SAFE_DISTANCE_SQR;
+                return threat == null || distanceToSqr(threat) >= (12.0D * 12.0D);
             }
 
             private boolean hasReachedStandPosition() {
                 return this.standPosition != null
-                        && position().distanceToSqr(this.standPosition) <= SUPPORT_STAND_REACHED_DISTANCE_SQR;
+                        && position().distanceToSqr(this.standPosition) <= (2.0D * 2.0D);
             }
 
             private void moveToSupportStandPosition(LivingEntity support, @Nullable LivingEntity threat) {
                 this.standPosition = findSupportStandPosition(support, threat);
                 getNavigation().moveTo(this.standPosition.x, this.standPosition.y, this.standPosition.z,
-                        threat == null ? SUPPORT_MOVE_SPEED : SUPPORT_DANGER_MOVE_SPEED);
+                        threat == null ? 1.15D : 1.25D);
                 this.repathCooldown = threat == null
-                        ? SUPPORT_STAND_REPATH_TICKS + random.nextInt(10)
-                        : SUPPORT_DANGER_REPATH_TICKS + random.nextInt(5);
+                        ? 30 + random.nextInt(10)
+                        : 8 + random.nextInt(5);
             }
 
             private Vec3 findSupportStandPosition(LivingEntity support, @Nullable LivingEntity threat) {
@@ -817,7 +623,7 @@ public class HerobrineGregEntity extends Monster {
                 if (Double.isNaN(baseAngle)) {
                     baseAngle = random.nextDouble() * Math.PI * 2.0D;
                 }
-                double standRadius = threat == null ? SUPPORT_STAND_RADIUS : SUPPORT_DANGER_STAND_RADIUS;
+                double standRadius = threat == null ? 7.0D : 15.0D;
 
                 if (threat == null) {
                     Vec3 currentSidePosition = standPositionAt(support, baseAngle, standRadius);
@@ -834,8 +640,8 @@ public class HerobrineGregEntity extends Monster {
 
                 Vec3 bestPosition = null;
                 double bestScore = Double.NEGATIVE_INFINITY;
-                for (int sample = 0; sample < SUPPORT_SAFE_SAMPLE_COUNT; sample++) {
-                    double angle = awayFromThreatAngle + (Math.PI * 2.0D * sample / SUPPORT_SAFE_SAMPLE_COUNT);
+                for (int sample = 0; sample < 16; sample++) {
+                    double angle = awayFromThreatAngle + (Math.PI * 2.0D * sample / 16);
                     Vec3 candidate = standPositionAt(support, angle, standRadius);
                     if (candidate == null) {
                         continue;
@@ -844,7 +650,7 @@ public class HerobrineGregEntity extends Monster {
                     double threatDistanceSqr = candidate.distanceToSqr(threat.position());
                     double movePenalty = candidate.distanceToSqr(position()) * 0.08D;
                     double score = threatDistanceSqr - movePenalty;
-                    if (threatDistanceSqr < SUPPORT_SAFE_DISTANCE_SQR) {
+                    if (threatDistanceSqr < (12.0D * 12.0D)) {
                         score -= 300.0D;
                     }
                     if (score > bestScore) {
@@ -890,7 +696,7 @@ public class HerobrineGregEntity extends Monster {
                 this.threat = findIdleThreat();
                 return this.threat != null
                         && this.threat.isAlive()
-                        && distanceToSqr(this.threat) <= IDLE_AVOID_TRIGGER_DISTANCE_SQR;
+                        && distanceToSqr(this.threat) <= (18.0D * 18.0D);
             }
 
             @Override
@@ -898,7 +704,7 @@ public class HerobrineGregEntity extends Monster {
                 return canIdleAvoid()
                         && this.threat != null
                         && this.threat.isAlive()
-                        && distanceToSqr(this.threat) <= IDLE_AVOID_SEARCH_RADIUS * IDLE_AVOID_SEARCH_RADIUS;
+                        && distanceToSqr(this.threat) <= 32.0D * 32.0D;
             }
 
             @Override
@@ -914,7 +720,7 @@ public class HerobrineGregEntity extends Monster {
                 }
 
                 getLookControl().setLookAt(this.threat, 30.0F, 30.0F);
-                if (distanceToSqr(this.threat) > IDLE_AVOID_TRIGGER_DISTANCE_SQR) {
+                if (distanceToSqr(this.threat) > (18.0D * 18.0D)) {
                     return;
                 }
                 if (idleAvoidRepathCooldown > 0 && !getNavigation().isDone()) {
@@ -926,8 +732,8 @@ public class HerobrineGregEntity extends Monster {
                     return;
                 }
 
-                getNavigation().moveTo(retreatPos.x, retreatPos.y, retreatPos.z, IDLE_AVOID_MOVE_SPEED);
-                idleAvoidRepathCooldown = IDLE_AVOID_REPATH_TICKS;
+                getNavigation().moveTo(retreatPos.x, retreatPos.y, retreatPos.z, 1.15D);
+                idleAvoidRepathCooldown = 15;
             }
 
             private boolean canIdleAvoid() {
@@ -936,9 +742,8 @@ public class HerobrineGregEntity extends Monster {
                         && escapeTiming < 0
                         && summonTiming < 0
                         && !isNoAi()
-                        && !isPortalCasting()
                         && !isSupportingHerobrine()
-                        && HerobrinePortalCombatUtil.findPortalSupportHerobrine(HerobrineGregEntity.this, SUPPORT_SEARCH_RADIUS) == null;
+                        && findGregFollowSupportHerobrine() == null;
             }
 
             @Nullable
@@ -946,7 +751,7 @@ public class HerobrineGregEntity extends Monster {
                 LivingEntity threat = HerobrinePortalCombatUtil.findThreateningEnemy(
                         HerobrineGregEntity.this,
                         null,
-                        IDLE_AVOID_SEARCH_RADIUS
+                        32.0D
                 );
                 if (threat != null) {
                     return threat;
@@ -954,7 +759,7 @@ public class HerobrineGregEntity extends Monster {
                 return HerobrinePortalCombatUtil.findEnemyForSupport(
                         HerobrineGregEntity.this,
                         null,
-                        IDLE_AVOID_SEARCH_RADIUS
+                        32.0D
                 );
             }
 
@@ -971,8 +776,8 @@ public class HerobrineGregEntity extends Monster {
 
                 for (int attempt = 0; attempt < 10; attempt++) {
                     double angle = awayAngle + (getRandom().nextDouble() - 0.5D) * 1.4D;
-                    double distance = IDLE_AVOID_MIN_DISTANCE
-                            + getRandom().nextDouble() * (IDLE_AVOID_MAX_DISTANCE - IDLE_AVOID_MIN_DISTANCE);
+                    double distance = 12.0D
+                            + getRandom().nextDouble() * (20.0D - 12.0D);
                     double x = getX() + Math.cos(angle) * distance;
                     double z = getZ() + Math.sin(angle) * distance;
                     BlockPos surface = serverLevel.getHeightmapPos(
@@ -1006,8 +811,7 @@ public class HerobrineGregEntity extends Monster {
         this.goalSelector.addGoal(1, new Goal() {
             @Override
             public boolean canUse() {
-                return !isPortalCasting()
-                        && firstSummonedHerobrine != null
+                return firstSummonedHerobrine != null
                         && firstSummonedHerobrine.isAlive()
                         && distanceTo(firstSummonedHerobrine) > 8.0D;
             }
@@ -1029,8 +833,7 @@ public class HerobrineGregEntity extends Monster {
 
             @Override
             public boolean canContinueToUse() {
-                return !isPortalCasting()
-                        && firstSummonedHerobrine != null
+                return firstSummonedHerobrine != null
                         && firstSummonedHerobrine.isAlive()
                         && distanceTo(firstSummonedHerobrine) > 5.0D;
             }
@@ -1038,8 +841,7 @@ public class HerobrineGregEntity extends Monster {
         this.goalSelector.addGoal(1, new Goal() {
             @Override
             public boolean canUse() {
-                return !isPortalCasting()
-                        && secondSummonedHerobrine != null
+                return secondSummonedHerobrine != null
                         && secondSummonedHerobrine.isAlive()
                         && distanceTo(secondSummonedHerobrine) > 8.0D;
             }
@@ -1061,8 +863,7 @@ public class HerobrineGregEntity extends Monster {
 
             @Override
             public boolean canContinueToUse() {
-                return !isPortalCasting()
-                        && secondSummonedHerobrine != null
+                return secondSummonedHerobrine != null
                         && secondSummonedHerobrine.isAlive()
                         && distanceTo(secondSummonedHerobrine) > 5.0D;
             }
@@ -1070,8 +871,7 @@ public class HerobrineGregEntity extends Monster {
         this.goalSelector.addGoal(1, new Goal() {
             @Override
             public boolean canUse() {
-                return !isPortalCasting()
-                        && thirdSummonedHerobrine != null
+                return thirdSummonedHerobrine != null
                         && thirdSummonedHerobrine.isAlive()
                         && distanceTo(thirdSummonedHerobrine) > 8.0D;
             }
@@ -1093,27 +893,26 @@ public class HerobrineGregEntity extends Monster {
 
             @Override
             public boolean canContinueToUse() {
-                return !isPortalCasting()
-                        && thirdSummonedHerobrine != null
+                return thirdSummonedHerobrine != null
                         && thirdSummonedHerobrine.isAlive()
                         && distanceTo(thirdSummonedHerobrine) > 5.0D;
             }
         });
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, VillagerScoutEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, VillagerScoutCaptainEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, BlueVillagerKnightEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, GreenVillagerKnightEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, RedVillagerKnightEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, PurpleVillagerKnightEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, VillagerScoutEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, VillagerScoutCaptainEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, BlueVillagerKnightEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, GreenVillagerKnightEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, RedVillagerKnightEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, PurpleVillagerKnightEntity.class, 12.0F, 1.0D, 1.35D));
 
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, PlayerNpcEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, Player.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, SteveEntity.class, 24.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, AlexEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, JevEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, ChrisEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, BlueDemonEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
-        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, BbqEntity.class, 12.0F, AVOID_WALK_SPEED, AVOID_SPRINT_SPEED));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, PlayerNpcEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, Player.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, SteveEntity.class, 24.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, AlexEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, JevEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, ChrisEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, BlueDemonEntity.class, 12.0F, 1.0D, 1.35D));
+        this.goalSelector.addGoal(2, new AvoidEntityGoal<>(this, BbqEntity.class, 12.0F, 1.0D, 1.35D));
 
         this.goalSelector.addGoal(3, new RandomStrollGoal(this, 1.0D));
         this.goalSelector.addGoal(4, new RandomLookAroundGoal(this));
@@ -1175,29 +974,10 @@ public class HerobrineGregEntity extends Monster {
     }
 
     private boolean hasNearbyHerobrineToSupport() {
-        LivingEntity support = HerobrinePortalCombatUtil.findPortalSupportHerobrine(this, SUPPORT_SEARCH_RADIUS);
+        LivingEntity support = this.findGregFollowSupportHerobrine();
         return support != null
                 && support.isAlive()
                 && !(support.isPassenger() && support.getVehicle() instanceof HerobrineDragonEntity);
-    }
-
-    private void tickPortalCast() {
-        if (this.portalCastTicks <= 0) {
-            return;
-        }
-
-        this.portalCastTicks--;
-        this.getNavigation().stop();
-        this.setSprinting(false);
-        this.xxa = 0.0F;
-        this.zza = 0.0F;
-
-        Vec3 deltaMovement = this.getDeltaMovement();
-        this.setDeltaMovement(0.0D, deltaMovement.y, 0.0D);
-
-        if (this.getTarget() != null && this.getTarget().isAlive()) {
-            this.getLookControl().setLookAt(this.getTarget(), 30.0F, 30.0F);
-        }
     }
 
     private void assignProtect(Entity entity, UUID protectUUID, EliteHerobrineKnockedEntity protectEntity) {
@@ -1220,91 +1000,6 @@ public class HerobrineGregEntity extends Monster {
 
     private static boolean isRidingHerobrineDragon(Entity entity) {
         return entity.isPassenger() && entity.getVehicle() instanceof HerobrineDragonEntity;
-    }
-
-    public boolean tryOpenRetreatPortalFor(LivingEntity support, @Nullable LivingEntity threat) {
-        if (!(this.level() instanceof ServerLevel serverLevel)
-                || support == null
-                || !support.isAlive()
-                || isRidingHerobrineDragon(support)
-                || threat == null
-                || !threat.isAlive()
-                || this.summoning
-                || this.escapeTiming >= 0
-                || this.summonTiming >= 0
-                || this.isNoAi()
-                || this.isPortalSummonAiLocked()
-                || this.isPortalCasting()) {
-            return false;
-        }
-        if (this.level().getGameTime() - this.lastRetreatPortalAssistTick < 40L) {
-            return false;
-        }
-        if (!TransporterFragmentItem.canSpawnOwnedPortals(serverLevel, this, 2)) {
-            return false;
-        }
-
-        Vec3 retreat = findActiveSupportRetreatPosition(serverLevel, support, threat);
-        if (retreat == null) {
-            return false;
-        }
-
-        int spawned = TransporterFragmentItem.spawnLinkedPortalPair(
-                this.level(),
-                this,
-                HerobrinePortalCombatUtil.applySupportPortalYOffset(this, support.position()),
-                HerobrinePortalCombatUtil.applySupportPortalYOffset(this, retreat)
-        );
-        if (spawned <= 0) {
-            return false;
-        }
-
-        this.lastRetreatPortalAssistTick = this.level().getGameTime();
-        this.activeSupportRetreatPos = retreat;
-        this.activeSupportRetreatTicks = ACTIVE_SUPPORT_RETREAT_TICKS;
-        this.markSupportingHerobrine();
-        HerobrinePortalCombatUtil.playPortalPairSummon(this);
-        return true;
-    }
-
-    public boolean tryOpenApproachPortalFor(LivingEntity support, LivingEntity target) {
-        if (!(this.level() instanceof ServerLevel serverLevel)
-                || support == null
-                || target == null
-                || !support.isAlive()
-                || !target.isAlive()
-                || isRidingHerobrineDragon(support)
-                || this.summoning
-                || this.escapeTiming >= 0
-                || this.summonTiming >= 0
-                || this.isNoAi()
-                || this.isPortalSummonAiLocked()
-                || this.isPortalCasting()) {
-            return false;
-        }
-        if (support.distanceToSqr(target) < 10.0D * 10.0D) {
-            return false;
-        }
-        if (this.level().getGameTime() - this.lastApproachPortalAssistTick < 40L) {
-            return false;
-        }
-        if (!TransporterFragmentItem.canSpawnOwnedPortals(serverLevel, this, 2)) {
-            return false;
-        }
-
-        if (this.distanceToSqr(support) > SUPPORT_STAND_DISTANCE_SQR) {
-            this.getNavigation().moveTo(support, SUPPORT_MOVE_SPEED);
-            this.getLookControl().setLookAt(support, 30.0F, 30.0F);
-            return false;
-        }
-
-        if (!HerobrinePortalCombatUtil.spawnSupportPortalPair(this, support, target)) {
-            return false;
-        }
-
-        this.lastApproachPortalAssistTick = this.level().getGameTime();
-        this.markSupportingHerobrine();
-        return true;
     }
 
     private void floatOnAnyFluid() {
@@ -1376,12 +1071,20 @@ public class HerobrineGregEntity extends Monster {
 
     @Override
     public void tick() {
+        if (!this.level().isClientSide && this.isHooked() && !this.hookedWaitingForGround) {
+            this.enforceHookedNoAiLock();
+        }
         super.tick();
         this.floatOnAnyFluid();
         this.checkInsideBlocks();
-        this.tickPortalSummonAiLock();
-        this.tickLowCloneSummonWeakPoint();
-        this.tickPortalCast();
+        if (!this.level().isClientSide) {
+            this.tickCombatLowCloneSupportSlots();
+            this.tickCombatActionCooldowns();
+            if (this.isHooked()) {
+                this.tickHookedGroundRelock();
+                return;
+            }
+        }
         if (!this.level().isClientSide) {
             placeObsidianBlockWhenInWater(AnnoyingVillagersModBlocks.CRYING_OBSIDIAN_BLOCK.get());
             tickSupportingHerobrineVisuals();
@@ -1406,10 +1109,6 @@ public class HerobrineGregEntity extends Monster {
                     this.setItemSlot(EquipmentSlot.CHEST, ItemStack.EMPTY);
                 }
             }
-            if (this.sixPortalSupportCooldown > 0) {
-                this.sixPortalSupportCooldown--;
-            }
-
             if (this.level().getDayTime() % 24000L == 13001 && this.summonTimestamp == -1) {
                 if (new Random().nextBoolean()) {
                     Objects.requireNonNull(this.level().getServer()).getPlayerList().broadcastSystemMessage(Component.literal("<" + this.getChatName() + "> " +
@@ -1426,6 +1125,7 @@ public class HerobrineGregEntity extends Monster {
                 this.summonTimestamp = -2; // Greg will never summon again
                 this.combatMode = true;
                 this.setNoAi(true);
+                this.setInvulnerable(true);
                 this.summoning = true;
                 this.summonTiming = 20;
                 this.addEffect(new MobEffectInstance(EpicFightMobEffects.STUN_IMMUNITY.get(), 120, 3, false, false));
@@ -1438,6 +1138,7 @@ public class HerobrineGregEntity extends Monster {
                 }
                 setWhiteEye(true);
                 this.setNoAi(true);
+                this.setInvulnerable(true);
                 this.summoning = true;
                 this.summonTiming = 20;
                 this.setHealth(1);
@@ -1458,54 +1159,6 @@ public class HerobrineGregEntity extends Monster {
                     summonHerobrines();
                 } else {
                     summonHerobrinesAndEscape();
-                }
-            }
-
-            this.tickQueuedSixPortalSupportReservation();
-            if (!this.summoning && this.escapeTiming < 0) {
-                if (!this.isPortalCasting() && !this.isPortalSummonAiLocked() && !this.isSixPortalSupportReserved()) {
-                    boolean portalActionUsed = false;
-                    if (this.supportCatchUpCooldown > 0) {
-                        this.supportCatchUpCooldown--;
-                    }
-                    portalActionUsed = this.tickRequestedSupportPortalAction();
-                    if (!portalActionUsed) {
-                        portalActionUsed = this.tickFarSupportPortalCatchUp();
-                    }
-                    if (this.rangedCounterPortalCooldown > 0) {
-                        this.rangedCounterPortalCooldown--;
-                    }
-                    if (!portalActionUsed && this.rangedCounterPortalCooldown <= 0) {
-                        portalActionUsed = HerobrinePortalCombatUtil.tryBowCounterPortalSupport(this);
-                        this.rangedCounterPortalCooldown = portalActionUsed
-                                ? randomRangedCounterPortalCooldown()
-                                : RANGED_COUNTER_PORTAL_RETRY_TICKS;
-                    }
-
-                    if (!portalActionUsed && this.portalSupportCooldown > 0) {
-                        this.portalSupportCooldown--;
-                    }
-                    if (!portalActionUsed && this.portalSupportCooldown <= 0) {
-                        portalActionUsed = HerobrinePortalCombatUtil.tryGregPortalSupport(this);
-                        this.portalSupportCooldown = portalActionUsed ? randomPortalSupportCooldown() : PORTAL_SUPPORT_RETRY_TICKS;
-                    }
-
-                    if (!portalActionUsed && this.summonTiming < 0) {
-                        if (this.lowCloneSupportCooldown > 0) {
-                            this.lowCloneSupportCooldown--;
-                        }
-                        if (this.lowCloneSupportCooldown <= 0) {
-                            int spawned = summonCombatLowCloneSupport();
-                            portalActionUsed = spawned > 0;
-                            this.lowCloneSupportCooldown = spawned > 0 ? randomLowCloneSupportCooldown() : LOW_CLONE_SUPPORT_RETRY_TICKS;
-                        }
-                    }
-
-                    if (!portalActionUsed) {
-                        tickActiveSupportReposition();
-                    }
-                } else {
-                    this.getNavigation().stop();
                 }
             }
 
@@ -1585,6 +1238,7 @@ public class HerobrineGregEntity extends Monster {
             }
 
             if (this.combatMode && this.escapeTiming == -1 && this.summonTiming == -2
+                    && !this.fishingHookCancelledEscape
                     && this.firstSummonedHerobrineUUID == null
                     && this.secondSummonedHerobrineUUID == null
                     && this.thirdSummonedHerobrineUUID == null) {
@@ -1592,7 +1246,7 @@ public class HerobrineGregEntity extends Monster {
                 this.setNoAi(true);
             }
 
-            if (this.combatMode && this.escapeTiming == -1 && this.recallTime >= 0) {
+            if (this.combatMode && !this.fishingHookCancelledEscape && this.escapeTiming == -1 && this.recallTime >= 0) {
                 this.recallTime = this.recallTime - 1;
                 if (this.recallTime == 20) {
                     this.setNoAi(true);
@@ -1621,12 +1275,12 @@ public class HerobrineGregEntity extends Monster {
 
         boolean panic = this.supportRetreatPanicTicks > 0;
         if (!panic && this.random.nextFloat() > 0.35F) {
-            this.supportRepositionCooldown = SUPPORT_REPOSITION_RETRY_TICKS;
+            this.supportRepositionCooldown = 120;
             return;
         }
 
         boolean activated = tryActiveSupportReposition(panic);
-        this.supportRepositionCooldown = activated ? randomSupportRepositionCooldown() : SUPPORT_REPOSITION_RETRY_TICKS;
+        this.supportRepositionCooldown = activated ? randomSupportRepositionCooldown() : 120;
     }
 
     private boolean tryActiveSupportReposition(boolean panic) {
@@ -1634,23 +1288,23 @@ public class HerobrineGregEntity extends Monster {
             return false;
         }
 
-        LivingEntity support = HerobrinePortalCombatUtil.findPortalSupportHerobrine(this, SUPPORT_SEARCH_RADIUS);
+        LivingEntity support = this.findGregFollowSupportHerobrine();
         if (support == null || !support.isAlive()
                 || (support.isPassenger() && support.getVehicle() instanceof HerobrineDragonEntity)) {
             return false;
         }
 
-        LivingEntity enemy = HerobrinePortalCombatUtil.findThreateningEnemy(this, support, SUPPORT_SAFE_ENEMY_SEARCH_RADIUS);
+        LivingEntity enemy = HerobrinePortalCombatUtil.findThreateningEnemy(this, support, 24.0D);
         if (enemy == null) {
-            enemy = HerobrinePortalCombatUtil.findEnemyForSupport(support, this.getTarget(), SUPPORT_SAFE_ENEMY_SEARCH_RADIUS);
+            enemy = HerobrinePortalCombatUtil.findEnemyForSupport(support, this.getTarget(), 24.0D);
         }
         if (enemy == null) {
             return false;
         }
 
         boolean dangerClose = panic
-                || this.distanceToSqr(enemy) <= SUPPORT_REPOSITION_GREG_DANGER_SQR
-                || support.distanceToSqr(enemy) <= SUPPORT_REPOSITION_SUPPORT_DANGER_SQR;
+                || this.distanceToSqr(enemy) <= 12.0D * 12.0D
+                || support.distanceToSqr(enemy) <= 10.0D * 10.0D;
         if (!dangerClose) {
             return false;
         }
@@ -1683,7 +1337,7 @@ public class HerobrineGregEntity extends Monster {
         }
 
         this.activeSupportRetreatPos = retreat;
-        this.activeSupportRetreatTicks = ACTIVE_SUPPORT_RETREAT_TICKS;
+        this.activeSupportRetreatTicks = 90;
         this.markSupportingHerobrine();
         HerobrinePortalCombatUtil.playPortalPairSummon(this);
         return true;
@@ -1702,8 +1356,8 @@ public class HerobrineGregEntity extends Monster {
         for (int attempt = 0; attempt < 32; attempt++) {
             double turn = (this.random.nextDouble() - 0.5D) * 1.2D;
             Vec3 direction = rotateHorizontal(away, turn);
-            double distance = SUPPORT_REPOSITION_RETREAT_MIN_DISTANCE
-                    + this.random.nextDouble() * (SUPPORT_REPOSITION_RETREAT_MAX_DISTANCE - SUPPORT_REPOSITION_RETREAT_MIN_DISTANCE);
+            double distance = 16.0D
+                    + this.random.nextDouble() * (24.0D - 16.0D);
             Vec3 raw = support.position().add(direction.scale(distance));
             Vec3 candidate = surfacePosition(serverLevel, raw.x, raw.z);
             if (isValidSupportRetreatPosition(serverLevel, candidate)) {
@@ -1720,14 +1374,14 @@ public class HerobrineGregEntity extends Monster {
         }
 
         this.markSupportingHerobrine();
-        this.supportRetreatPanicTicks = Math.max(this.supportRetreatPanicTicks, ACTIVE_SUPPORT_RETREAT_TICKS);
+        this.supportRetreatPanicTicks = Math.max(this.supportRetreatPanicTicks, 90);
         this.supportRepositionCooldown = 0;
         this.getLookControl().setLookAt(threat, 30.0F, 30.0F);
         if (!(this.level() instanceof ServerLevel serverLevel)) {
             return;
         }
 
-        LivingEntity support = HerobrinePortalCombatUtil.findPortalSupportHerobrine(this, SUPPORT_SEARCH_RADIUS);
+        LivingEntity support = this.findGregFollowSupportHerobrine();
         Vec3 retreat = support != null && support.isAlive()
                 ? findActiveSupportRetreatPosition(serverLevel, support, threat)
                 : findDirectRetreatPosition(serverLevel, threat);
@@ -1736,8 +1390,8 @@ public class HerobrineGregEntity extends Monster {
         }
 
         this.activeSupportRetreatPos = retreat;
-        this.activeSupportRetreatTicks = ACTIVE_SUPPORT_RETREAT_TICKS;
-        this.getNavigation().moveTo(retreat.x, retreat.y, retreat.z, SUPPORT_ACTIVE_RETREAT_MOVE_SPEED);
+        this.activeSupportRetreatTicks = 90;
+        this.getNavigation().moveTo(retreat.x, retreat.y, retreat.z, 1.3D);
     }
 
     @Nullable
@@ -1750,8 +1404,8 @@ public class HerobrineGregEntity extends Monster {
         for (int attempt = 0; attempt < 24; attempt++) {
             double turn = (this.random.nextDouble() - 0.5D) * 1.4D;
             Vec3 direction = rotateHorizontal(away, turn);
-            double distance = SUPPORT_REPOSITION_RETREAT_MIN_DISTANCE
-                    + this.random.nextDouble() * (SUPPORT_REPOSITION_RETREAT_MAX_DISTANCE - SUPPORT_REPOSITION_RETREAT_MIN_DISTANCE);
+            double distance = 16.0D
+                    + this.random.nextDouble() * (24.0D - 16.0D);
             Vec3 raw = this.position().add(direction.scale(distance));
             Vec3 candidate = surfacePosition(serverLevel, raw.x, raw.z);
             if (isValidSupportRetreatPosition(serverLevel, candidate)) {
@@ -1794,7 +1448,7 @@ public class HerobrineGregEntity extends Monster {
         }
 
         for (int attempt = 0; attempt < 16; attempt++) {
-            double sideDistance = SUPPORT_REPOSITION_RETURN_SIDE_DISTANCE + this.random.nextDouble() * 4.0D;
+            double sideDistance = 6.0D + this.random.nextDouble() * 4.0D;
             double backDistance = 2.0D + this.random.nextDouble() * 4.0D;
             Vec3 raw = enemy.position()
                     .add(side.scale(sideDistance))
@@ -1805,7 +1459,7 @@ public class HerobrineGregEntity extends Monster {
             }
         }
 
-        Vec3 fallbackRaw = enemy.position().add(fromEnemyToSupport.scale(SUPPORT_REPOSITION_RETURN_SIDE_DISTANCE));
+        Vec3 fallbackRaw = enemy.position().add(fromEnemyToSupport.scale(6.0D));
         return surfacePosition(serverLevel, fallbackRaw.x, fallbackRaw.z);
     }
 
@@ -1838,90 +1492,73 @@ public class HerobrineGregEntity extends Monster {
         return new Vec3(vector.x * cos - vector.z * sin, 0.0D, vector.x * sin + vector.z * cos).normalize();
     }
 
-    private int summonCombatLowCloneSupport() {
+    private void tickCombatLowCloneSupportSlots() {
         if (!(this.level() instanceof ServerLevel serverLevel)) {
-            return 0;
+            return;
         }
 
-        LivingEntity support = HerobrinePortalCombatUtil.findPortalSupportHerobrine(this, SUPPORT_SEARCH_RADIUS);
-        if (support == null || !support.isAlive()
-                || (support.isPassenger() && support.getVehicle() instanceof HerobrineDragonEntity)) {
-            return 0;
-        }
+        for (int i = 0; i < MAX_COMBAT_LOW_CLONE_SUPPORT; i++) {
+            Entity tracked = this.combatLowCloneSupport[i];
+            UUID trackedUuid = this.combatLowCloneSupportUUIDs[i];
+            if (tracked == null && trackedUuid != null) {
+                tracked = serverLevel.getEntity(trackedUuid);
+                if (isTrackedCombatLowClone(tracked)) {
+                    this.combatLowCloneSupport[i] = tracked;
+                } else {
+                    this.clearCombatLowCloneSupportSlot(i);
+                    continue;
+                }
+            }
 
-        LivingEntity enemy = HerobrinePortalCombatUtil.findThreateningEnemy(this, support, LOW_CLONE_SUPPORT_ENEMY_RADIUS);
-        if (enemy == null) {
-            enemy = HerobrinePortalCombatUtil.findEnemyForSupport(support, this.getTarget(), LOW_CLONE_SUPPORT_ENEMY_RADIUS);
-        }
-        if (enemy == null) {
-            return 0;
-        }
-
-        int count = 1 + this.random.nextInt(3);
-        int spawned = 0;
-        for (int i = 0; i < count; i++) {
-            if (spawnCombatLowCloneNear(serverLevel, support, enemy)) {
-                spawned++;
+            if (tracked != null && (!tracked.isAlive() || tracked.isRemoved())) {
+                this.clearCombatLowCloneSupportSlot(i);
             }
         }
-
-        if (spawned > 0) {
-            this.markSupportingHerobrine();
-            this.startLowCloneSummonWeakPoint();
-            HerobrinePortalCombatUtil.playClonePortalSummon(this);
-        }
-        return spawned;
     }
 
-    private boolean spawnCombatLowCloneNear(ServerLevel serverLevel, Entity anchor, LivingEntity enemy) {
-        boolean shadowClone = this.random.nextBoolean();
-        for (int attempt = 0; attempt < LOW_CLONE_SUPPORT_SPAWN_ATTEMPTS; attempt++) {
-            double angle = this.random.nextDouble() * Math.PI * 2.0D;
-            double radius = 2.5D + this.random.nextDouble() * 5.5D;
-            double x = anchor.getX() + Math.cos(angle) * radius;
-            double z = anchor.getZ() + Math.sin(angle) * radius;
-            int y = serverLevel.getHeight(Heightmap.Types.MOTION_BLOCKING_NO_LEAVES, Mth.floor(x), Mth.floor(z));
-            BlockPos spawnPos = BlockPos.containing(x, y, z);
-            if (!isValidCombatLowCloneSpawn(serverLevel, spawnPos)) {
-                continue;
-            }
-
-            Mob clone = shadowClone
-                    ? new LowShadowHerobrineCloneEntity(AnnoyingVillagersModEntities.LOW_SHADOW_HEROBRINE_CLONE.get(), serverLevel)
-                    : new LowHerobrineCloneEntity(AnnoyingVillagersModEntities.LOW_HEROBRINE_CLONE.get(), serverLevel);
-            clone.moveTo(x, y, z, this.getYRot(), this.getXRot());
-            if (!serverLevel.noCollision(clone)) {
-                continue;
-            }
-
-            if (clone instanceof LowHerobrineCloneEntity lowHerobrineCloneEntity) {
-                lowHerobrineCloneEntity.setSummoned(true);
-                lowHerobrineCloneEntity.setRenderPortal(false);
-            } else if (clone instanceof LowShadowHerobrineCloneEntity lowShadowHerobrineCloneEntity) {
-                lowShadowHerobrineCloneEntity.setSummoned(true);
-                lowShadowHerobrineCloneEntity.setRenderPortal(false);
-            }
-
-            equipGearForLowHerobrineClone(clone);
-            clone.setTarget(enemy);
-            clone.lookAt(EntityAnchorArgument.Anchor.EYES, enemy.getEyePosition());
-            clone.finalizeSpawn(serverLevel, serverLevel.getCurrentDifficultyAt(spawnPos), MobSpawnType.MOB_SUMMONED, null, null);
-            serverLevel.addFreshEntity(clone);
-            AnnoyingVillagers.PACKET_HANDLER.send(
-                    PacketDistributor.TRACKING_ENTITY.with(() -> clone),
-                    new ClientboundHerobrinePortalFx(new Vec3(x, y, z))
-            );
-            return true;
-        }
-        return false;
+    private static boolean isTrackedCombatLowClone(@Nullable Entity entity) {
+        return entity != null
+                && entity.isAlive()
+                && (entity instanceof LowHerobrineCloneEntity || entity instanceof LowShadowHerobrineCloneEntity);
     }
 
-    private boolean isValidCombatLowCloneSpawn(ServerLevel serverLevel, BlockPos spawnPos) {
-        return serverLevel.isLoaded(spawnPos)
-                && serverLevel.getWorldBorder().isWithinBounds(spawnPos)
-                && serverLevel.isEmptyBlock(spawnPos)
-                && serverLevel.isEmptyBlock(spawnPos.above())
-                && !serverLevel.isEmptyBlock(spawnPos.below());
+    private void clearCombatLowCloneSupportSlot(int index) {
+        this.combatLowCloneSupport[index] = null;
+        this.combatLowCloneSupportUUIDs[index] = null;
+    }
+
+    private int getAvailableCombatLowCloneSupportSlot() {
+        for (int i = 0; i < MAX_COMBAT_LOW_CLONE_SUPPORT; i++) {
+            if (this.combatLowCloneSupportUUIDs[i] == null) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    public int getAvailableCombatLowCloneSupportSlotCount() {
+        int count = 0;
+        for (UUID uuid : this.combatLowCloneSupportUUIDs) {
+            if (uuid == null) {
+                count++;
+            }
+        }
+        return count;
+    }
+
+    public boolean hasAvailableCombatLowCloneSupportSlot() {
+        return this.getAvailableCombatLowCloneSupportSlot() >= 0;
+    }
+
+    public boolean claimCombatLowCloneSupportSlot(Entity clone) {
+        int slot = this.getAvailableCombatLowCloneSupportSlot();
+        if (slot < 0) {
+            return false;
+        }
+
+        this.combatLowCloneSupport[slot] = clone;
+        this.combatLowCloneSupportUUIDs[slot] = clone.getUUID();
+        return true;
     }
 
     private void summonHerobrine(String herobrineMobId, double spawnX, double spawnY,
@@ -2304,46 +1941,46 @@ public class HerobrineGregEntity extends Monster {
     }
 
     public boolean hurt(@NotNull DamageSource pSource, float f) {
-        if (this.summoning) {
+        if (pSource.is(DamageTypes.FELL_OUT_OF_WORLD)) {
+            return super.hurt(pSource, f);
+        }
+        if (this.shouldBlockPortalSummonDamage()) {
+            this.blockPortalSummonDamage(pSource);
             return false;
         }
         if (this.escapeTiming < 0) {
             markSupportPanicFromHit(pSource);
         }
-        if (this.isLowCloneSummonWeakPointActive()) {
-            if (pSource.is(DamageTypes.FELL_OUT_OF_WORLD)) {
-                return super.hurt(pSource, f);
-            }
-            if (this.random.nextFloat() >= 0.5F) {
-                if (this.level() instanceof ServerLevel serverLevel) {
-                    EpicfightUtil.damageBlocked(pSource, this, serverLevel);
-                }
-                return false;
-            }
+        if (this.fishingHookCancelledEscape) {
             return super.hurt(pSource, 1.0F);
         }
-        if (this.escapeTiming >= 0) {
-            if (pSource.is(DamageTypes.FELL_OUT_OF_WORLD)) {
-                return super.hurt(pSource, f);
-            }
-            if (this.random.nextFloat() >= 0.5F) {
-                if (this.level() instanceof ServerLevel serverLevel) {
-                    EpicfightUtil.damageBlocked(pSource, this, serverLevel);
-                }
-                return false;
-            }
-            return super.hurt(pSource, 1.0F);
-        } else if (this.getHealth() == 1 || this.combatMode) {
+        if (this.getHealth() == 1 || this.combatMode) {
             if (this.level() instanceof ServerLevel serverLevel) {
                 EpicfightUtil.damageBlocked(pSource, this, serverLevel);
             }
             return false;
         }
-        if (pSource.is(DamageTypes.FELL_OUT_OF_WORLD)) {
-            return super.hurt(pSource, f);
-        } else {
-            return super.hurt(pSource, 1.0F);
+        return super.hurt(pSource, 1.0F);
+    }
+
+    private boolean shouldBlockPortalSummonDamage() {
+        return this.summoning;
+    }
+
+    private void blockPortalSummonDamage(DamageSource source) {
+        if (this.level() instanceof ServerLevel serverLevel) {
+            EpicfightUtil.damageBlocked(source, this, serverLevel);
         }
+    }
+
+    @Override
+    public void die(@NotNull DamageSource damageSource) {
+        this.hookedWaitingForGround = false;
+        this.hookedLeftGround = false;
+        this.setHooked(false);
+        this.setNoAi(false);
+        this.setInvulnerable(false);
+        super.die(damageSource);
     }
 
     private void markSupportPanicFromHit(DamageSource source) {
@@ -2351,14 +1988,14 @@ public class HerobrineGregEntity extends Monster {
             return;
         }
 
-        this.supportRetreatPanicTicks = Math.max(this.supportRetreatPanicTicks, ACTIVE_SUPPORT_RETREAT_TICKS);
+        this.supportRetreatPanicTicks = Math.max(this.supportRetreatPanicTicks, 90);
         this.supportRepositionCooldown = Math.min(this.supportRepositionCooldown, 1 + this.random.nextInt(20));
     }
 
     @Override
     protected void dropCustomDeathLoot(@NotNull DamageSource damageSource, int looting, boolean recentlyHit) {
         super.dropCustomDeathLoot(damageSource, looting, recentlyHit);
-        if (this.escapeTiming >= 0) {
+        if (this.escapeTiming >= 0 || this.fishingHookCancelledEscape) {
             this.spawnAtLocation(new ItemStack(AnnoyingVillagersModItems.TRANSPORTER_FRAGMENT.get()));
         }
     }
@@ -2370,28 +2007,22 @@ public class HerobrineGregEntity extends Monster {
     }
 
     private void equipGearForLowHerobrineClone(Entity entity) {
-        if (entity instanceof LowShadowHerobrineCloneEntity && random.nextFloat() < 0.2F) {
-            entity.setItemSlot(EquipmentSlot.HEAD, randomDamage(new ItemStack(Items.NETHERITE_HELMET)));
-            entity.setItemSlot(EquipmentSlot.CHEST, randomDamage(new ItemStack(Items.NETHERITE_CHESTPLATE)));
-            entity.setItemSlot(EquipmentSlot.LEGS, randomDamage(new ItemStack(Items.NETHERITE_LEGGINGS)));
-            entity.setItemSlot(EquipmentSlot.FEET, randomDamage(new ItemStack(Items.NETHERITE_BOOTS)));
-            entity.setItemSlot(EquipmentSlot.MAINHAND, new ItemStack(Items.GOLDEN_SWORD));
-            entity.setItemSlot(EquipmentSlot.OFFHAND, new ItemStack(Items.GOLDEN_SWORD));
-        } else {
-            if (random.nextFloat() < 0.3f) {
-                entity.setItemSlot(EquipmentSlot.HEAD, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_HELMET.get())));
-            }
-            if (random.nextFloat() < 0.3f) {
-                entity.setItemSlot(EquipmentSlot.CHEST, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_CHESTPLATE.get())));
-            }
-            if (random.nextFloat() < 0.3f) {
-                entity.setItemSlot(EquipmentSlot.LEGS, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_LEGGINGS.get())));
-            }
-            if (random.nextFloat() < 0.3f) {
-                entity.setItemSlot(EquipmentSlot.FEET, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_BOOTS.get())));
-            }
-            entity.setItemSlot(EquipmentSlot.MAINHAND, randomDamage(new ItemStack(listWeapons.get(random.nextInt(listWeapons.size())))));
+        if (!(entity instanceof LowHerobrineCloneEntity) && !(entity instanceof LowShadowHerobrineCloneEntity)) {
+            return;
         }
+        if (random.nextFloat() < 0.3f) {
+            entity.setItemSlot(EquipmentSlot.HEAD, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_HELMET.get())));
+        }
+        if (random.nextFloat() < 0.3f) {
+            entity.setItemSlot(EquipmentSlot.CHEST, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_CHESTPLATE.get())));
+        }
+        if (random.nextFloat() < 0.3f) {
+            entity.setItemSlot(EquipmentSlot.LEGS, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_LEGGINGS.get())));
+        }
+        if (random.nextFloat() < 0.3f) {
+            entity.setItemSlot(EquipmentSlot.FEET, randomDamage(new ItemStack(AnnoyingVillagersModItems.BROKEN_DIAMOND_BOOTS.get())));
+        }
+        entity.setItemSlot(EquipmentSlot.MAINHAND, randomDamage(new ItemStack(listWeapons.get(random.nextInt(listWeapons.size())))));
     }
 
     public SpawnGroupData finalizeSpawn(@NotNull ServerLevelAccessor serverlevelaccessor, @NotNull DifficultyInstance difficultyinstance, @NotNull MobSpawnType mobspawntype, @Nullable SpawnGroupData spawngroupdata, @Nullable CompoundTag compoundtag) {
@@ -2434,28 +2065,18 @@ public class HerobrineGregEntity extends Monster {
         summonTimestamp = pCompound.getInt("SummonTimestamp");
         combatMode = pCompound.getBoolean("CombatMode");
         recallTime = pCompound.getInt("RecallTime");
-        portalSupportCooldown = pCompound.contains("PortalSupportCooldown") ? pCompound.getInt("PortalSupportCooldown") : randomPortalSupportCooldown();
-        sixPortalSupportCooldown = pCompound.contains("SixPortalSupportCooldown") ? pCompound.getInt("SixPortalSupportCooldown") : 0;
-        lowCloneSupportCooldown = pCompound.contains("LowCloneSupportCooldown") ? pCompound.getInt("LowCloneSupportCooldown") : randomLowCloneSupportCooldown();
-        rangedCounterPortalCooldown = pCompound.contains("RangedCounterPortalCooldown") ? pCompound.getInt("RangedCounterPortalCooldown") : randomRangedCounterPortalCooldown();
-        portalCastTicks = pCompound.getInt("PortalCastTicks");
-        portalSummonAiLockTicks = pCompound.getInt("PortalSummonAiLockTicks");
-        lowCloneSummonWeakPointTicks = pCompound.getInt("LowCloneSummonWeakPointTicks");
-        queuedSixPortalSupportLockTicks = pCompound.getInt("QueuedSixPortalSupportLockTicks");
-        requestedSupportPortalTicks = pCompound.getInt("RequestedSupportPortalTicks");
-        requestedSupportPortalMode = pCompound.getByte("RequestedSupportPortalMode");
-        supportCatchUpCooldown = pCompound.contains("SupportCatchUpCooldown") ? pCompound.getInt("SupportCatchUpCooldown") : SUPPORT_CATCH_UP_RETRY_TICKS;
-        if (portalSummonAiLockTicks > 0 || lowCloneSummonWeakPointTicks > 0) {
-            this.setNoAi(true);
-        }
-        if (pCompound.hasUUID("QueuedSixPortalSupportTargetUUID")) {
-            queuedSixPortalSupportTargetUUID = pCompound.getUUID("QueuedSixPortalSupportTargetUUID");
-        }
-        if (pCompound.hasUUID("RequestedSupportPortalSupportUUID")) {
-            requestedSupportPortalSupportUUID = pCompound.getUUID("RequestedSupportPortalSupportUUID");
-        }
-        if (pCompound.hasUUID("RequestedSupportPortalTargetUUID")) {
-            requestedSupportPortalTargetUUID = pCompound.getUUID("RequestedSupportPortalTargetUUID");
+        fishingHookCancelledEscape = pCompound.getBoolean("FishingHookCancelledEscape");
+        lowCloneSupportCooldown = pCompound.getInt("LowCloneSupportCooldown");
+        portalPairCooldown = pCompound.getInt("PortalPairCooldown");
+        rangedCounterPortalCooldown = pCompound.getInt("RangedCounterPortalCooldown");
+        supportEscapePortalCooldown = pCompound.getInt("SupportEscapePortalCooldown");
+        portalEscapeStepBackCooldown = pCompound.getInt("PortalEscapeStepBackCooldown");
+        sixPortalSupportCooldown = pCompound.getInt("SixPortalSupportCooldown");
+        this.hookedWaitingForGround = pCompound.getBoolean("HookedWaitingForGround");
+        this.hookedLeftGround = pCompound.getBoolean("HookedLeftGround");
+        this.setHooked(pCompound.getBoolean("Hooked"));
+        if (this.isHooked() && this.hookedWaitingForGround) {
+            this.releaseHookedPhysicsUntilGround();
         }
         if (pCompound.hasUUID("FirstSummonedHerobrineUUID")) {
             firstSummonedHerobrineUUID = pCompound.getUUID("FirstSummonedHerobrineUUID");
@@ -2465,6 +2086,12 @@ public class HerobrineGregEntity extends Monster {
         }
         if (pCompound.hasUUID("ThirdSummonedHerobrineUUID")) {
             thirdSummonedHerobrineUUID = pCompound.getUUID("ThirdSummonedHerobrineUUID");
+        }
+        for (int i = 0; i < MAX_COMBAT_LOW_CLONE_SUPPORT; i++) {
+            String key = "CombatLowCloneSupportUUID" + i;
+            if (pCompound.hasUUID(key)) {
+                this.combatLowCloneSupportUUIDs[i] = pCompound.getUUID(key);
+            }
         }
     }
 
@@ -2479,26 +2106,16 @@ public class HerobrineGregEntity extends Monster {
         pCompound.putInt("SummonTimestamp", summonTimestamp);
         pCompound.putBoolean("CombatMode", combatMode);
         pCompound.putInt("RecallTime", recallTime);
-        pCompound.putInt("PortalSupportCooldown", portalSupportCooldown);
-        pCompound.putInt("SixPortalSupportCooldown", sixPortalSupportCooldown);
+        pCompound.putBoolean("FishingHookCancelledEscape", fishingHookCancelledEscape);
         pCompound.putInt("LowCloneSupportCooldown", lowCloneSupportCooldown);
+        pCompound.putInt("PortalPairCooldown", portalPairCooldown);
         pCompound.putInt("RangedCounterPortalCooldown", rangedCounterPortalCooldown);
-        pCompound.putInt("PortalCastTicks", portalCastTicks);
-        pCompound.putInt("PortalSummonAiLockTicks", portalSummonAiLockTicks);
-        pCompound.putInt("LowCloneSummonWeakPointTicks", lowCloneSummonWeakPointTicks);
-        pCompound.putInt("QueuedSixPortalSupportLockTicks", queuedSixPortalSupportLockTicks);
-        pCompound.putInt("RequestedSupportPortalTicks", requestedSupportPortalTicks);
-        pCompound.putByte("RequestedSupportPortalMode", requestedSupportPortalMode);
-        pCompound.putInt("SupportCatchUpCooldown", supportCatchUpCooldown);
-        if (queuedSixPortalSupportTargetUUID != null) {
-            pCompound.putUUID("QueuedSixPortalSupportTargetUUID", queuedSixPortalSupportTargetUUID);
-        }
-        if (requestedSupportPortalSupportUUID != null) {
-            pCompound.putUUID("RequestedSupportPortalSupportUUID", requestedSupportPortalSupportUUID);
-        }
-        if (requestedSupportPortalTargetUUID != null) {
-            pCompound.putUUID("RequestedSupportPortalTargetUUID", requestedSupportPortalTargetUUID);
-        }
+        pCompound.putInt("SupportEscapePortalCooldown", supportEscapePortalCooldown);
+        pCompound.putInt("PortalEscapeStepBackCooldown", portalEscapeStepBackCooldown);
+        pCompound.putInt("SixPortalSupportCooldown", sixPortalSupportCooldown);
+        pCompound.putBoolean("Hooked", this.isHooked());
+        pCompound.putBoolean("HookedWaitingForGround", this.hookedWaitingForGround);
+        pCompound.putBoolean("HookedLeftGround", this.hookedLeftGround);
         if (firstSummonedHerobrineUUID != null) {
             pCompound.putUUID("FirstSummonedHerobrineUUID", firstSummonedHerobrineUUID);
         }
@@ -2507,6 +2124,11 @@ public class HerobrineGregEntity extends Monster {
         }
         if (thirdSummonedHerobrineUUID != null) {
             pCompound.putUUID("ThirdSummonedHerobrineUUID", thirdSummonedHerobrineUUID);
+        }
+        for (int i = 0; i < MAX_COMBAT_LOW_CLONE_SUPPORT; i++) {
+            if (this.combatLowCloneSupportUUIDs[i] != null) {
+                pCompound.putUUID("CombatLowCloneSupportUUID" + i, this.combatLowCloneSupportUUIDs[i]);
+            }
         }
     }
 
